--- a/alianzas.html
+++ b/alianzas.html
@@ -14,9 +14,8 @@
 
   <!-- Pruebas -->
 
-  <link href="//cdn.rawgit.com/noelboss/featherlight/1.7.13/release/featherlight.min.css" type="text/css" rel="stylesheet" />
-  <link href="//cdn.rawgit.com/noelboss/featherlight/1.7.13/release/featherlight.gallery.min.css" type="text/css" rel="stylesheet" />
-
+  <link rel="stylesheet" href="css/featherlight.min.css">
+  <link rel="stylesheet" href="css/featherlight.gallery.min.css">
 
   <!-- Pruebas -->
 
@@ -756,10 +755,14 @@
             <div class="row">
               <div class="col text-center">
                 <section data-featherlight-gallery data-featherlight-filter="a">
-                  <a href="img/restaurante y hotel el buen gusto/IMG_20180916_113552.jpg"><img class="img-fluid lazy" src="img/restaurante y hotel el buen gusto/IMG_20180916_113552.jpg"></a>
-                  <a href="img/restaurante y hotel el buen gusto/IMG_20180916_113655.jpg"><img class="img-fluid lazy" src="img/restaurante y hotel el buen gusto/IMG_20180916_113655.jpg"></a>
-                  <a href="img/restaurante y hotel el buen gusto/IMG_20180916_113720.jpg"><img class="img-fluid lazy" src="img/restaurante y hotel el buen gusto/IMG_20180916_113720.jpg"></a>
-                  <a href="img/restaurante y hotel el buen gusto/IMG_20180916_114339.jpg"><img class="img-fluid lazy" src="img/restaurante y hotel el buen gusto/IMG_20180916_114339.jpg"></a>
+                  <a href="img/restaurante y hotel el buen gusto/IMG_20180916_113552.jpg"><img class="img-fluid lazy"
+                      src="img/restaurante y hotel el buen gusto/IMG_20180916_113552.jpg"></a>
+                  <a href="img/restaurante y hotel el buen gusto/IMG_20180916_113655.jpg"><img class="img-fluid lazy"
+                      src="img/restaurante y hotel el buen gusto/IMG_20180916_113655.jpg"></a>
+                  <a href="img/restaurante y hotel el buen gusto/IMG_20180916_113720.jpg"><img class="img-fluid lazy"
+                      src="img/restaurante y hotel el buen gusto/IMG_20180916_113720.jpg"></a>
+                  <a href="img/restaurante y hotel el buen gusto/IMG_20180916_114339.jpg"><img class="img-fluid lazy"
+                      src="img/restaurante y hotel el buen gusto/IMG_20180916_114339.jpg"></a>
                 </section>
               </div>
             </div>
@@ -803,16 +806,12 @@
   <script src="js/jquery.lazy.min.js"></script>
   <script src="js/carga.js"></script>
   <script src="js/holder.js"></script>
+  <script src="js/in-view.min.js"></script>
   <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
   <script src="js/app.js"></script>
-
-
-
-  <script src="//cdn.rawgit.com/noelboss/featherlight/1.7.13/release/featherlight.min.js" type="text/javascript"
-    charset="utf-8"></script>
-  <script src="//cdn.rawgit.com/noelboss/featherlight/1.7.13/release/featherlight.gallery.min.js" type="text/javascript"
-    charset="utf-8"></script>
-  <script src="//cdnjs.cloudflare.com/ajax/libs/detect_swipe/2.1.1/jquery.detect_swipe.min.js"></script>
+  <script src="js/featherlight.min.js"></script>
+  <script src="js/featherlight.gallery.min.js"></script>
+  <!-- <script src="//cdnjs.cloudflare.com/ajax/libs/detect_swipe/2.1.1/jquery.detect_swipe.min.js"></script> -->
 
   <script>
     $('a.gallery').featherlightGallery({
@@ -822,6 +821,11 @@
 
       openSpeed: 300
     });
+
+    inView('#exampleModal').on('enter', function () {
+      console.log("hola");
+    });
+
   </script>
 
 </body>
