--- a/alianzas.html
+++ b/alianzas.html
@@ -24,54 +24,52 @@
 <body>
   <!-- INDEX -->
   <section class="container-fluid pl-0 pr-0" id="">
-    <div class="">
+    <header class="">
       <div class="">
-        <header class="">
-          <div class="">
-            <!-- menu -->
-            <nav class="row navbar navbar-expand-sm bg-white">
-              <div class="col">
-                <a class="navbar-brand ml-3 text-green d-none d-sm-block" href="index.html"><span class="title font-weight-bold">Coomutranstur</span><br></a>
-                <a class="navbar-brand ml-3 text-green d-block d-sm-none" href="index.html"><span class="title2 font-weight-bold">Coomutranstur</span><br></a>
-              </div>
-              <div class="col d-none d-md-inline-block">
-                <ul class="navbar-nav mt-2 float-right">
-                  <li class="nav-item">
-                    <a href="https://www.facebook.com/coomutranstur/" target="_blank"><i class="fab fa-facebook fa-2x"></i></a>
-                  </li>
-                  <li class="nav-item">
-                    <a href="https://www.instagram.com/coomutranstur/" target="_blank"><i class="fab fa-instagram fa-2x"></i></a>
-                  </li>
-                  <li class="nav-item">
-                    <a href="https://twitter.com/coomutranstur" target="_blank"><i class="fab fa-twitter-square fa-2x"></i></a>
-                  </li>
-                </ul>
-              </div>
-            </nav>
-            <nav class="row navbar navbar-expand-lg bg-nav-menu">
-              <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02"
-                ria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon">
-                  <i class="fas fa-bars"></i>
-                </span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-                <ul class="navbar-nav mt-2 mt-lg-0 mr-auto">
-                  <li class="nav-item">
-                    <a class="nav-link" href="turismo.html">Guía turística</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="acerca.html">Nosotros</a>
-                  </li>
-                  <li class="nav-item active">
-                    <a class="nav-link" href="#">Alianzas Estratégicas</a>
-                  </li>
-                </ul>
-              </div>
-            </nav>
+        <!-- menu -->
+        <nav class="row navbar navbar-expand-sm bg-white">
+          <div class="col">
+            <a class="navbar-brand ml-3 text-green d-none d-sm-block" href="index.html"><span class="title font-weight-bold">Coomutranstur</span><br></a>
+            <a class="navbar-brand ml-3 text-green d-block d-sm-none" href="index.html"><span class="title2 font-weight-bold">Coomutranstur</span><br></a>
           </div>
-        </header>
-        <!-- texto main -->
+          <div class="col d-none d-md-inline-block">
+            <ul class="navbar-nav mt-2 float-right">
+              <li class="nav-item">
+                <a href="https://www.facebook.com/coomutranstur/" target="_blank"><i class="fab fa-facebook fa-2x"></i></a>
+              </li>
+              <li class="nav-item">
+                <a href="https://www.instagram.com/coomutranstur/" target="_blank"><i class="fab fa-instagram fa-2x"></i></a>
+              </li>
+              <li class="nav-item">
+                <a href="https://twitter.com/coomutranstur" target="_blank"><i class="fab fa-twitter-square fa-2x"></i></a>
+              </li>
+            </ul>
+          </div>
+        </nav>
+        <nav class="row navbar navbar-expand-lg bg-nav-menu">
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02"
+            ria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon">
+              <i class="fas fa-bars"></i>
+            </span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+            <ul class="navbar-nav mt-2 mt-lg-0 mr-auto">
+              <li class="nav-item">
+                <a class="nav-link" href="turismo.html">Guía turística</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="acerca.html">Nosotros</a>
+              </li>
+              <li class="nav-item active">
+                <a class="nav-link" href="#">Alianzas Estratégicas</a>
+              </li>
+            </ul>
+          </div>
+        </nav>
+      </div>
+    </header>
+    <!-- texto main -->
   </section>
   <video src="video/casa wenka.mp4" height="400px" width="100%" controls muted autoplay></video>
 
@@ -88,8 +86,8 @@
         <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xl-3">
           <div class="alianza row align-items-center">
             <div class="col text-center">
-              <a href="img/restaurante y hotel el buen gusto/IMG_20180916_113530.jpg" data-featherlight="image"><img
-                  class="cabecita img-fluid lazy" src="img/restaurante y hotel el buen gusto/IMG_20180916_113530.jpg"></a>
+              <a href="img/alianza/el buen gusto/IMG_20180916_113530.jpg" data-featherlight="image"><img class="cabecita img-fluid lazy"
+                  src="img/alianza/el buen gusto/IMG_20180916_113530.jpg"></a>
             </div>
             <div class="w-100"></div>
             <div class="col text-center">
@@ -121,8 +119,7 @@
         <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xl-3">
           <div class="alianza row align-items-center">
             <div class="col text-center">
-              <a href="img/restaurante y hotel el buen gusto/IMG_20180916_113530.jpg" data-featherlight="image"><img
-                  class="cabecita img-fluid lazy" src="holder.js/100x70"></a>
+              <a href="" data-featherlight="image"><img class="cabecita img-fluid lazy" src="holder.js/100x70"></a>
             </div>
             <div class="w-100"></div>
             <div class="col text-center">
@@ -154,7 +151,8 @@
         <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xl-3">
           <div class="alianza row align-items-center">
             <div class="col text-center">
-              <a href="holder.js/100x70" data-featherlight="image"><img class="cabecita img-fluid" src="holder.js/100x70"></a>
+              <a href="img/alianza/hotel y restaurante david/IMG_20180916_125943.jpg" data-featherlight="image"><img
+                  class="cabecita img-fluid" src="img/alianza/hotel y restaurante david/IMG_20180916_125943.jpg"></a>
             </div>
             <div class="w-100"></div>
             <div class="col text-center">
@@ -186,7 +184,8 @@
         <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xl-3">
           <div class="alianza row align-items-center">
             <div class="col text-center">
-              <a href="holder.js/100x70" data-featherlight="image"><img class="cabecita img-fluid" src="holder.js/100x70"></a>
+              <a href="img/alianza/las delicias de maga/IMG_20180916_115244.jpg" data-featherlight="image"><img class="cabecita img-fluid"
+                  src="img/alianza/las delicias de maga/IMG_20180916_115244.jpg"></a>
             </div>
             <div class="w-100"></div>
             <div class="col text-center">
@@ -218,7 +217,8 @@
         <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xl-3">
           <div class="alianza row align-items-center">
             <div class="col text-center">
-              <a href="holder.js/100x70" data-featherlight="image"><img class="cabecita img-fluid" src="holder.js/100x70"></a>
+              <a href="img/alianza/hotel mayesty/IMG_20180916_122007.jpg" data-featherlight="image"><img class="cabecita img-fluid"
+                  src="img/alianza/hotel mayesty/IMG_20180916_122007.jpg"></a>
             </div>
             <div class="w-100"></div>
             <div class="col text-center">
@@ -250,7 +250,8 @@
         <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xl-3">
           <div class="alianza row align-items-center">
             <div class="col text-center">
-              <a href="holder.js/100x70" data-featherlight="image"><img class="cabecita img-fluid" src="holder.js/100x70"></a>
+              <a href="img/alianza/hotel genaro/IMG_20180916_124708.jpg" data-featherlight="image"><img class="cabecita img-fluid"
+                  src="img/alianza/hotel genaro/IMG_20180916_124708.jpg"></a>
             </div>
             <div class="w-100"></div>
             <div class="col text-center">
@@ -346,7 +347,8 @@
         <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xl-3">
           <div class="alianza row align-items-center">
             <div class="col text-center">
-              <a href="holder.js/100x70" data-featherlight="image"><img class="cabecita img-fluid" src="holder.js/100x70"></a>
+              <a href="img/alianza/resaurante san cirpriano/IMG_20180916_150710.jpg" data-featherlight="image"><img
+                  class="cabecita img-fluid" src="img/alianza/resaurante san cirpriano/IMG_20180916_150710.jpg"></a>
             </div>
             <div class="w-100"></div>
             <div class="col text-center">
@@ -378,7 +380,8 @@
         <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xl-3">
           <div class="alianza row align-items-center">
             <div class="col text-center">
-              <a href="holder.js/100x70" data-featherlight="image"><img class="cabecita img-fluid" src="holder.js/100x70"></a>
+              <a href="img/alianza/Posada Don jose/IMG_20180916_144825.jpg" data-featherlight="image"><img class="cabecita img-fluid"
+                  src="img/alianza/Posada Don jose/IMG_20180916_144825.jpg"></a>
             </div>
             <div class="w-100"></div>
             <div class="col text-center">
@@ -410,7 +413,8 @@
         <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xl-3">
           <div class="alianza row align-items-center">
             <div class="col text-center">
-              <a href="holder.js/100x70" data-featherlight="image"><img class="cabecita img-fluid" src="holder.js/100x70"></a>
+              <a href="img/alianza/hotel ivankar/IMG_20180916_145733.jpg" data-featherlight="image"><img class="cabecita img-fluid"
+                  src="img/alianza/hotel ivankar/IMG_20180916_145733.jpg"></a>
             </div>
             <div class="w-100"></div>
             <div class="col text-center">
@@ -442,39 +446,8 @@
         <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xl-3">
           <div class="alianza row align-items-center">
             <div class="col text-center">
-              <a href="holder.js/100x70" data-featherlight="image"><img class="cabecita img-fluid" src="holder.js/100x70"></a>
-            </div>
-            <div class="w-100"></div>
-            <div class="col text-center">
-
-              <h4 class="green">Hotel Ivankar</h4>
-              <br>
-
-              Propietario: ? <br>
-              Ubicación: San Cipriano
-
-              <br>
-              <br>
-
-              <div class="w-100"></div>
-              <i class="au fas fa-utensils fa-2x" data-toggle="tooltip" data-placement="bottom" title="Restaurante"></i>
-              <i class="au fas fa-concierge-bell fa-2x" data-toggle="tooltip" data-placement="bottom" title="Hospedaje"></i>
-              <i class="au fas fa-glass-martini fa-2x" data-toggle="tooltip" data-placement="bottom" title="Bar"></i>
-
-              <div class="w-100"></div>
-              <a class="" href="#!">www.facebook.com/#</a>
-
-              <div class="w-100"></div>
-              <button type="button" class="botoncito btn btn-success" data-toggle="modal" data-target="#exampleModal">Ver
-                fotos</button>
-            </div>
-          </div>
-        </div>
-        <!-- Div col -->
-        <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xl-3">
-          <div class="alianza row align-items-center">
-            <div class="col text-center">
-              <a href="holder.js/100x70" data-featherlight="image"><img class="cabecita img-fluid" src="holder.js/100x70"></a>
+              <a href="img/alianza/El sazón de chilin/IMG_20181012_110756.jpg" data-featherlight="image"><img class="cabecita img-fluid"
+                  src="img/alianza/El sazón de chilin/IMG_20181012_110756.jpg"></a>
             </div>
             <div class="w-100"></div>
             <div class="col text-center">
@@ -506,7 +479,74 @@
         <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xl-3">
           <div class="alianza row align-items-center">
             <div class="col text-center">
-              <a href="holder.js/100x70" data-featherlight="image"><img class="cabecita img-fluid" src="holder.js/100x70"></a>
+              <a href="img/alianza/hotel lucia/IMG_20180916_120811.jpg" data-featherlight="image"><img class="cabecita img-fluid"
+                  src="img/alianza/hotel lucia/IMG_20180916_120811.jpg"></a>
+            </div>
+            <div class="w-100"></div>
+            <div class="col text-center">
+
+              <h4 class="green">Hotel Lucía</h4>
+              <br>
+
+              Propietario: ? <br>
+              Ubicación: San Cipriano
+
+              <br>
+              <br>
+
+              <div class="w-100"></div>
+              <i class="au fas fa-utensils fa-2x" data-toggle="tooltip" data-placement="bottom" title="Restaurante"></i>
+              <i class="au fas fa-concierge-bell fa-2x" data-toggle="tooltip" data-placement="bottom" title="Hospedaje"></i>
+              <i class="au fas fa-glass-martini fa-2x" data-toggle="tooltip" data-placement="bottom" title="Bar"></i>
+
+              <div class="w-100"></div>
+              <a class="" href="#!">www.facebook.com/#</a>
+
+              <div class="w-100"></div>
+              <button type="button" class="botoncito btn btn-success" data-toggle="modal" data-target="#exampleModal">Ver
+                fotos</button>
+            </div>
+          </div>
+        </div>
+        <!-- Div col -->
+        <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xl-3">
+          <div class="alianza row align-items-center">
+            <div class="col text-center">
+              <a href="img/alianza/Hotel peña azul/WP_20181012_063.jpg" data-featherlight="image"><img class="cabecita img-fluid"
+                  src="img/alianza/Hotel peña azul/WP_20181012_063.jpg"></a>
+            </div>
+            <div class="w-100"></div>
+            <div class="col text-center">
+
+              <h4 class="green">Hotel Peña Azul</h4>
+              <br>
+
+              Propietario: ? <br>
+              Ubicación: San Cipriano
+
+              <br>
+              <br>
+
+              <div class="w-100"></div>
+              <i class="au fas fa-utensils fa-2x" data-toggle="tooltip" data-placement="bottom" title="Restaurante"></i>
+              <i class="au fas fa-concierge-bell fa-2x" data-toggle="tooltip" data-placement="bottom" title="Hospedaje"></i>
+              <i class="au fas fa-glass-martini fa-2x" data-toggle="tooltip" data-placement="bottom" title="Bar"></i>
+
+              <div class="w-100"></div>
+              <a class="" href="#!">www.facebook.com/#</a>
+
+              <div class="w-100"></div>
+              <button type="button" class="botoncito btn btn-success" data-toggle="modal" data-target="#exampleModal">Ver
+                fotos</button>
+            </div>
+          </div>
+        </div>
+        <!-- Div col -->
+        <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xl-3">
+          <div class="alianza row align-items-center">
+            <div class="col text-center">
+              <a href="img/alianza/Restaurante y Estadero Doris/IMG_20181012_110428.jpg" data-featherlight="image"><img
+                  class="cabecita img-fluid" src="img/alianza/Restaurante y Estadero Doris/IMG_20181012_110428.jpg"></a>
             </div>
             <div class="w-100"></div>
             <div class="col text-center">
@@ -602,7 +642,8 @@
         <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xl-3">
           <div class="alianza row align-items-center">
             <div class="col text-center">
-              <a href="holder.js/100x70" data-featherlight="image"><img class="cabecita img-fluid" src="holder.js/100x70"></a>
+              <a href="img/alianza/flotador el cholo/IMG_20180916_123914.jpg" data-featherlight="image"><img class="cabecita img-fluid"
+                  src="img/alianza/flotador el cholo/IMG_20180916_123914.jpg"></a>
             </div>
             <div class="w-100"></div>
             <div class="col text-center">
@@ -698,7 +739,7 @@
         <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xl-3">
           <div class="alianza row align-items-center">
             <div class="col text-center">
-              <a href="holder.js/100x70" data-featherlight="image"><img class="cabecita img-fluid" src="holder.js/100x70"></a>
+              <a href="img/alianza/Artesanias Macano/WP_20181012_068.jpg" data-featherlight="image"><img class="cabecita img-fluid" src="img/alianza/Artesanias Macano/WP_20181012_066.jpg"></a>
             </div>
             <div class="w-100"></div>
             <div class="col text-center">
