Historia de la cooperativa
se añadieron efectos y otras cositas más

--- a/acerca.html
+++ b/acerca.html
@@ -11,6 +11,7 @@
     <title>COOMUSTRANSTUR</title>
 
     <link rel="stylesheet" href="css/aos.css">
+    <link rel="stylesheet" href="css/timeline.css">
     <link rel="stylesheet" href="css/style.css">
     <script src="js/jquery.min.js"></script>
 </head>
@@ -81,7 +82,7 @@
 
             <div id="quienes" class="d-flex align-items-center justify-content-center">
                 <div class="col-sm-10 col-lg-8" data-aos="zoom-in">
-                    <p class="title">¿Quiénes somos?</p>
+                    <p class="title text-center">¿Quiénes somos?</p>
                     <p class="text-justify">Somos una organización sin ánimo de lucro, de interés social,
                         perteneciente al
                         sector
@@ -133,7 +134,74 @@
                     </p>
                 </div>
             </div>
+        </div>
+    </section>
 
+    <!-- Historia de las motobrujitas -->
+
+    <h3 class="title text-center pt-4 pb-4">Historia de las Cooperativa Coomutranstur</h3>
+    <section class="timeline">
+        <div class="container">
+            <div class="timeline-item">
+                <div class="timeline-img"></div>
+
+                <div class="timeline-content " data-aos="fade-up" data-aos-delay="50">
+                    <h2>Title</h2>
+                    <div class="date">1 MAY 2016</div>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                </div>
+            </div>
+
+            <div class="timeline-item" data-aos="fade-up" data-aos-delay="50">
+
+                <div class="timeline-img"></div>
+
+                <div class="timeline-content timeline-card ">
+                    <div class="timeline-img-header">
+                        <img src="img/bg1.jpg" class="img-fluid" alt="">
+                        <h2>Card Title</h2>
+                    </div>
+                    <div class="date">25 MAY 2016</div>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime ipsa ratione omnis alias
+                        cupiditate saepe atque totam aperiam sed nulla voluptatem recusandae dolor, nostrum excepturi
+                        amet in dolores. Alias, ullam.</p>
+                </div>
+
+            </div>
+
+            <div class="timeline-item" data-aos="fade-up" data-aos-delay="50">
+
+                <div class="timeline-img"></div>
+
+                <div class="timeline-content ">
+                    <div class="date">3 JUN 2016</div>
+                    <h2>Quote</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime ipsa ratione omnis alias
+                            cupiditate saepe atque totam aperiam sed nulla voluptatem recusandae dolor, nostrum excepturi
+                            amet in dolores. Alias, ullam.</p>
+                    </div>
+            </div>
+
+            <div class="timeline-item" data-aos="fade-up" data-aos-delay="50">
+
+                <div class="timeline-img"></div>
+
+                <div class="timeline-content ">
+                    <h2>Title</h2>
+                    <div class="date">22 JUN 2016</div>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime ipsa ratione omnis alias
+                        cupiditate saepe atque totam aperiam sed nulla voluptatem recusandae dolor, nostrum excepturi
+                        amet in dolores. Alias, ullam.</p>
+                </div>
+            </div>
+
+            
+        </div>
+    </section>
+
+
+    <section class="container-fluid pl-0 pr-0">
+        <div class="row text-dark justify-content-around">
             <div class="w-100 mb-5"></div>
             <div class="col-12" data-aos="zoom-in">
                 <div class="row justify-content-around">
