--- a/turismo.html
+++ b/turismo.html
@@ -145,6 +145,9 @@
         <div class="col-12 text-center">
             <p>COOPERATIVA MULTIATIVA DE TRANSPORTE TURISTICO EN EL CORREGIMIENTO DE CORDOBA Y SAN CIPRIANO</p>
         </div>
+        <div class="col-12 text-center">
+            <p>Buenaventura / Valle del Cauca / Colombia</p>
+        </div>
         <div class="col-6 d-flex align-items-center justify-content-end">
             <p class="d-inline">
                 <em>NIT: 830.500.789-9</em>
