--- a/acerca.html
+++ b/acerca.html
@@ -177,9 +177,9 @@
                     <div class="date">3 JUN 2016</div>
                     <h2>Quote</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime ipsa ratione omnis alias
-                            cupiditate saepe atque totam aperiam sed nulla voluptatem recusandae dolor, nostrum excepturi
-                            amet in dolores. Alias, ullam.</p>
-                    </div>
+                        cupiditate saepe atque totam aperiam sed nulla voluptatem recusandae dolor, nostrum excepturi
+                        amet in dolores. Alias, ullam.</p>
+                </div>
             </div>
 
             <div class="timeline-item" data-aos="fade-up" data-aos-delay="50">
@@ -195,7 +195,7 @@
                 </div>
             </div>
 
-            
+
         </div>
     </section>
 
@@ -331,6 +331,9 @@
     <div id="footer" class="row">
         <div class="col-12 text-center">
             <p>COOPERATIVA MULTIATIVA DE TRANSPORTE TURISTICO EN EL CORREGIMIENTO DE CORDOBA Y SAN CIPRIANO</p>
+        </div>
+        <div class="col-12 text-center">
+            <p>Buenaventura / Valle del Cauca / Colombia</p>
         </div>
         <div class="col-6 d-flex align-items-center justify-content-end">
             <p class="d-inline">
