--- a/alianzas.html
+++ b/alianzas.html
@@ -739,7 +739,8 @@
         <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xl-3">
           <div class="alianza row align-items-center">
             <div class="col text-center">
-              <a href="img/alianza/Artesanias Macano/WP_20181012_068.jpg" data-featherlight="image"><img class="cabecita img-fluid" src="img/alianza/Artesanias Macano/WP_20181012_066.jpg"></a>
+              <a href="img/alianza/Artesanias Macano/WP_20181012_068.jpg" data-featherlight="image"><img class="cabecita img-fluid"
+                  src="img/alianza/Artesanias Macano/WP_20181012_066.jpg"></a>
             </div>
             <div class="w-100"></div>
             <div class="col text-center">
@@ -823,6 +824,9 @@
     <div class="row">
       <div class="col-12 text-center">
         <p>COOPERATIVA MULTIATIVA DE TRANSPORTE TURISTICO EN EL CORREGIMIENTO DE CORDOBA Y SAN CIPRIANO</p>
+      </div>
+      <div class="col-12 text-center">
+        <p>Buenaventura / Valle del Cauca / Colombia</p>
       </div>
       <div class="col-6 d-flex align-items-center justify-content-end">
         <p class="d-inline">
