--- a/index.html
+++ b/index.html
@@ -133,21 +133,21 @@
             </ol>
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img class="d-block w-100 pb-3 img-fluid" data-src="holder.js/500x300?auto=yes">
+                <img class="d-block w-100 pb-3 " data-src="holder.js/300x300?auto=yes">
                 <div class="carousel-caption d-none d-md-block">
                   <h5>Noticia 1</h5>
                   <p>El evento numero 1 en...</p>
                 </div>
               </div>
               <div class="carousel-item">
-                <img class="d-block w-100 pb-3 img-fluid" data-src="holder.js/500x300?auto=yes">
+                <img class="d-block w-100 pb-3 " data-src="holder.js/300x300?auto=yes">
                 <div class="carousel-caption d-none d-md-block">
                   <h5>Noticia 2</h5>
                   <p>El evento numero 2 en...</p>
                 </div>
               </div>
               <div class="carousel-item">
-                <img class="d-block w-100 pb-3 img-fluid" data-src="holder.js/500x300?auto=yes">
+                <img class="d-block w-100 pb-3 " data-src="holder.js/300x300?auto=yes">
                 <div class="carousel-caption d-none d-md-block">
                   <h5>Noticia 3</h5>
                   <p>El evento numero 3 en...</p>
@@ -387,6 +387,9 @@
     <div id="footer" class="row">
       <div class="col-12 text-center">
         <p>COOPERATIVA MULTIATIVA DE TRANSPORTE TURISTICO EN EL CORREGIMIENTO DE CORDOBA Y SAN CIPRIANO</p>
+      </div>
+      <div class="col-12 text-center">
+        <p>Buenaventura / Valle del Cauca / Colombia</p>
       </div>
       <div class="col-6 d-flex align-items-center justify-content-end">
         <p class="d-inline">
