--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
         <div class="col col-sm-10 col-xl-6 tarjeta2">
           <h3 class="green">Noticias</h3>
 
-          <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+          <!-- <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
             <ol class="carousel-indicators">
               <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
               <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
@@ -162,9 +162,11 @@
               <span class="carousel-control-next-icon" aria-hidden="true"></span>
               <span class="sr-only">Next</span>
             </a>
-          </div>
+          </div> -->
 
         </div>
+
+        
         <div class="col-sm-12 col-xl-6">
 
           <div class="row d-flex align-items-center">
