--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
   <main>
     <section id="noticias" class="container-fluid">
 
-      <div class="row justify-content-around">
+      <div class="row text-centet">
 
         <div class="col-12">
           <div class="col mb-3 text-center title font-weight-bold">
@@ -122,7 +122,7 @@
           </div>
         </div>
 
-        <div class="col col-sm-10 col-xl-6 tarjeta2">
+        <div class="col col-sm-12 col-lg-8 col-xl-8 tarjeta2 mb-4">
           <h3 class="green">Noticias</h3>
 
           <!-- <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
@@ -166,20 +166,31 @@
 
         </div>
 
-        
-        <div class="col-sm-12 col-xl-6">
+
+        <div class="col-sm-12 col-lg-4 col-xl-4">
 
           <div class="row d-flex align-items-center">
-            <div class="col-sm-6"> <a class="twitter-timeline" data-height="400" href="https://twitter.com/TwitterDev?ref_src=twsrc%5Etfw">Tweets
+            <div class="col-sm-6 col-md-6 col-lg-12"> <a class="twitter-timeline" data-height="400" href="https://twitter.com/TwitterDev?ref_src=twsrc%5Etfw">Tweets
                 by TwitterDev</a>
             </div>
-            <div class="col-sm-6">
-              <div id="facebook-container" class="fb-comments" data-href="https://fserver.github.io/" data-height="400"
-                data-width="100%" data-numposts="5"></div>
+            <div class="d-none d-md-block d-lg-none col-md-6 ">
+              <img id="img_twitter" src="img/index/twitter-1848505_640.png" alt="">
             </div>
+
           </div>
         </div>
 
+      </div>
+
+      <div id="comentarios" class="row d-flex justify-content-center align-items-center">
+        <div class="col-sm-12 col-md-6 tarjeta text-dark tarjeta3">
+          <h3>Permítanos saber de usted</h3>
+          <p id="facebook_text" class="d-inline"></p>
+        </div>
+        <div class="col">
+          <div id="facebook-container" class="fb-comments" data-href="https://fserver.github.io/" data-height="400"
+            data-width="100%" data-numposts="5"></div>
+        </div>
       </div>
     </section>
 
@@ -442,10 +453,22 @@
         typeSpeed: 20,
         cursorChar: '_',
         smartBackspace: false,
-        loop: false,
+        loop: false
       });
     });
 
+    inView("#comentarios").once('enter', function () {
+
+      new Typed('#facebook_text', {
+        strings: ['Sus opiniones', 'Sus comentarios', 'Su experiencia', 'Nosotros los valoramos ;)'],
+        startDelay: 1000,
+        typeSpeed: 30,
+        backDelay: 1500,
+        cursorChar: '_',
+        smartBackspace: true,
+        loop: true
+      });
+    });
 
   </script>
 
