--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
       </div>
 
       <div id="comentarios" class="row d-flex justify-content-center align-items-center">
-        <div class="col-sm-12 col-md-6 tarjeta text-dark tarjeta3">
+        <div class="col-sm-12 col-md-6 text-center tarjeta3">
           <h3>Permítanos saber de usted</h3>
           <p id="facebook_text" class="d-inline"></p>
         </div>
