--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
             <div class="col-sm-6 col-md-6 col-lg-12"> <a class="twitter-timeline" data-height="400" href="https://twitter.com/TwitterDev?ref_src=twsrc%5Etfw">Tweets
                 by TwitterDev</a>
             </div>
-            <div class="d-none d-md-block d-lg-none col-md-6 ">
+            <div class="d-none d-sm-block d-md-block d-lg-none col-sm-6 col-md-6 ">
               <img id="img_twitter" src="img/index/twitter-1848505_640.png" alt="">
             </div>
 
