--- a/cultura.html
+++ b/cultura.html
@@ -92,6 +92,7 @@
     <div id="google_translate_element" class="d-flex d-inline justify-content-end fixed-top"></div>
 
     <!-- Scripts -->
+    <script src="js/chaport.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/parallax.min.js"></script>
     <script src="js/aos.js"></script>
