--- a/index.html
+++ b/index.html
@@ -422,6 +422,7 @@
 
   <!-- Scripts -->
 
+  <script src="js/chaport.js"></script>
   <script src="js/jquery.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
   <script src="js/scrollreveal.min.js"></script>
