--- a/alianzas.html
+++ b/alianzas.html
@@ -846,6 +846,7 @@
   <div id="google_translate_element" class="d-flex d-inline justify-content-end fixed-top"></div>
 
   <!-- SCRIPTS -->
+  <script src="js/chaport.js"></script>
   <script src="js/jquery.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
   <script src="js/jquery.lazy.min.js"></script>
