--- a/turismo.html
+++ b/turismo.html
@@ -164,7 +164,7 @@
 
     <div id="google_translate_element" class="d-flex d-inline justify-content-end fixed-top"></div>
 
-
+    <script src="js/chaport.js"></script>
     <script src="js/jquery.min.js"></script>
     <script src="js/jquery.lazy.min.js"></script>
     <!-- <script src="js/carga.js"></script> -->
